...

    //MARK: - LifeCycle
    override func viewDidLoad() {
        super.viewDidLoad()
        configureBackBarButton()
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()
        
        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
             options: [],
             changeHandler: { [weak self] _, _ in
...
